# IP

./: .gitignore
cpp/ch3/: CMakeLists.txt  README.rst
cpp/ch3/includes/: Params.hpp  histgram.hpp  histimage.hpp  histprint.hpp  histsmooth.hpp  image.hpp  thresh_mode.hpp  threshold.hpp  threshold_discrim.hpp  threshold_dynamic.hpp  threshold_mode.hpp
cpp/ch3/result/: histgram.txt
cpp/ch3/src/: CMakeLists.txt  histgram.cpp  histimage.cpp  histprint.cpp  histsmooth.cpp  image.cpp  main.cpp  thresh_mode.cpp  threshold.cpp  threshold_discrim.cpp  threshold_dynamic.cpp  threshold_mode.cpp
cpp/ch4/includes/: gradient.hpp  prewitt.hpp
cpp/ch4/src/: gradient.cpp  prewitt.cpp
